Adds imgs to html

--- a/index.html
+++ b/index.html
@@ -12,12 +12,24 @@
     <div class="container">
       <h1>Memory Game</h1>
       <div class="card-container">
-        <div class="card card-1">Card-1</div>
-        <div class="card card-2">Card-2</div>
-        <div class="card card-3">Card-3</div>
-        <div class="card card-4">Card-4</div>
-        <div class="card card-5">Card-5</div>
-        <div class="card card-6">Card-6</div>
+        <div class="card card-1">
+          <img src="./imgs/cat_240x240.jpg" alt="cat" />
+        </div>
+        <div class="card card-2">
+          <!-- <img src="./imgs/dog_240x240.jpg" alt="dog" /> -->
+        </div>
+        <div class="card card-3">
+          <!-- <img src="./imgs/rabbit_240x240.jpg" alt="rabbit" /> -->
+        </div>
+        <div class="card card-4">
+          <!-- <img src="./imgs/cat_240x240.jpg" alt="cat" /> -->
+        </div>
+        <div class="card card-5">
+          <!-- <img src="./imgs/dog_240x240.jpg" alt="dog" /> -->
+        </div>
+        <div class="card card-6">
+          <!-- <img src="./imgs/rabbit_240x240.jpg" alt="rabbit" /> -->
+        </div>
       </div>
       <div class="controls-container">
         <div class="results">
