--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <h1>Memory Game</h1>
       <div class="card-container">
         <div class="card card-1">
-          <img src="./imgs/cat_240x240.jpg" alt="cat" />
+          <img class="cat-1" src="./imgs/cat_240x240.jpg" alt="cat" />
         </div>
         <div class="card card-2">
-          <!-- <img src="./imgs/dog_240x240.jpg" alt="dog" /> -->
+          <img class="dog-1" src="./imgs/dog_240x240.jpg" alt="dog" />
         </div>
         <div class="card card-3">
-          <!-- <img src="./imgs/rabbit_240x240.jpg" alt="rabbit" /> -->
+          <img class="rabbit-1" src="./imgs/rabbit_240x240.jpg" alt="rabbit" />
         </div>
         <div class="card card-4">
           <!-- <img src="./imgs/cat_240x240.jpg" alt="cat" /> -->
