adds randomization of cards

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
           <img class="rabbit-1" src="./imgs/rabbit_240x240.jpg" alt="rabbit" />
         </div>
         <div class="card card-4">
-          <!-- <img src="./imgs/cat_240x240.jpg" alt="cat" /> -->
+          <img class="cat-2" src="./imgs/cat_240x240.jpg" alt="cat" />
         </div>
         <div class="card card-5">
-          <!-- <img src="./imgs/dog_240x240.jpg" alt="dog" /> -->
+          <img class="dog-2" src="./imgs/dog_240x240.jpg" alt="dog" />
         </div>
         <div class="card card-6">
-          <!-- <img src="./imgs/rabbit_240x240.jpg" alt="rabbit" /> -->
+          <img class="rabbit-2" src="./imgs/rabbit_240x240.jpg" alt="rabbit" />
         </div>
       </div>
       <div class="controls-container">
