--- a/index.html
+++ b/index.html
@@ -12,23 +12,31 @@
     <div class="container">
       <h1>Memory Game</h1>
       <div class="card-container">
-        <div class="card card-1">
-          <img class="cat-1" src="./imgs/cat_240x240.jpg" alt="cat" />
+        <div class="card card-1" onclick="revealImg(event)">
+          <img class="cat cat-1" src="./imgs/cat_240x240.jpg" alt="cat" />
         </div>
-        <div class="card card-2">
-          <img class="dog-1" src="./imgs/dog_240x240.jpg" alt="dog" />
+        <div class="card card-2" onclick="revealImg(event)">
+          <img class="dog dog-1" src="./imgs/dog_240x240.jpg" alt="dog" />
         </div>
-        <div class="card card-3">
-          <img class="rabbit-1" src="./imgs/rabbit_240x240.jpg" alt="rabbit" />
+        <div class="card card-3" onclick="revealImg(event)">
+          <img
+            class="rabbit rabbit-1"
+            src="./imgs/rabbit_240x240.jpg"
+            alt="rabbit"
+          />
         </div>
-        <div class="card card-4">
-          <img class="cat-2" src="./imgs/cat_240x240.jpg" alt="cat" />
+        <div class="card card-4" onclick="revealImg(event)">
+          <img class="cat cat-2" src="./imgs/cat_240x240.jpg" alt="cat" />
         </div>
-        <div class="card card-5">
-          <img class="dog-2" src="./imgs/dog_240x240.jpg" alt="dog" />
+        <div class="card card-5" onclick="revealImg(event)">
+          <img class="dog dog-2" src="./imgs/dog_240x240.jpg" alt="dog" />
         </div>
-        <div class="card card-6">
-          <img class="rabbit-2" src="./imgs/rabbit_240x240.jpg" alt="rabbit" />
+        <div class="card card-6" onclick="revealImg(event)">
+          <img
+            class="rabbit rabbit-2"
+            src="./imgs/rabbit_240x240.jpg"
+            alt="rabbit"
+          />
         </div>
       </div>
       <div class="controls-container">
