Adds reset btn functionality

--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
     <div class="container">
       <h1>Memory Game</h1>
       <div class="card-container">
-        <div class="card card-1" onclick="revealImg(event)">
+        <div class="card card-1" onclick="uncoverCard(event)">
           <img class="cat cat-1" src="./imgs/cat_240x240.jpg" alt="cat" />
         </div>
-        <div class="card card-2" onclick="revealImg(event)">
+        <div class="card card-2" onclick="uncoverCard(event)">
           <img class="dog dog-1" src="./imgs/dog_240x240.jpg" alt="dog" />
         </div>
-        <div class="card card-3" onclick="revealImg(event)">
+        <div class="card card-3" onclick="uncoverCard(event)">
           <img
             class="rabbit rabbit-1"
             src="./imgs/rabbit_240x240.jpg"
             alt="rabbit"
           />
         </div>
-        <div class="card card-4" onclick="revealImg(event)">
+        <div class="card card-4" onclick="uncoverCard(event)">
           <img class="cat cat-2" src="./imgs/cat_240x240.jpg" alt="cat" />
         </div>
-        <div class="card card-5" onclick="revealImg(event)">
+        <div class="card card-5" onclick="uncoverCard(event)">
           <img class="dog dog-2" src="./imgs/dog_240x240.jpg" alt="dog" />
         </div>
-        <div class="card card-6" onclick="revealImg(event)">
+        <div class="card card-6" onclick="uncoverCard(event)">
           <img
             class="rabbit rabbit-2"
             src="./imgs/rabbit_240x240.jpg"
@@ -45,7 +45,7 @@
           <div class="failed">Failed-Attempts:</div>
         </div>
         <div class="btn-container">
-          <button>Reset</button>
+          <button class="btn-reset">Reset</button>
         </div>
       </div>
     </div>
