--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="controls-container">
         <div class="results">
           <div class="score">Scores:</div>
-          <div class="failed">Failed-Attempts:</div>
+          <div class="fail">Failed-Attempts:</div>
         </div>
         <div class="btn-container">
           <button class="btn-reset">Reset</button>
