fixes bug where click on uncovered imgs was registering clicks\

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       </div>
       <div class="controls-container">
         <div class="results">
-          <div class="score">Scores:</div>
-          <div class="fail">Failed-Attempts:</div>
+          <div class="score">Scores: 0</div>
+          <div class="fail">Failed-Attempts: 0</div>
         </div>
         <div class="btn-container">
           <button class="btn-reset">Reset</button>
